/**
 * Building coordinates data
 * Geographic coordinates for all campus buildings
 */
const buildingCoordinates = {
  // Sir George Williams Campus
  hall: {
    latitude: 45.497092,
    longitude: -73.578974,
    name: "Henry F. Hall Building",
    address: "1455 De Maisonneuve Blvd. W.",
  },
  library: {
    latitude: 45.497291,
    longitude: -73.577126,
    name: "Webster Library Building",
    address: "1400 De Maisonneuve Blvd. W.",
  },
  ev: {
    latitude: 45.495543,
    longitude: -73.577489,
    name: "Engineering, Computer Science and Visual Arts Complex",
    address: "1515 St. Catherine W.",
  },
  mb: {
    latitude: 45.495305,
    longitude: -73.579037,
    name: "John Molson Building",
    address: "1450 Guy St.",
  },
  jmsb: {
    latitude: 45.495305,
    longitude: -73.579037,
    name: "John Molson School of Business",
    address: "1450 Guy St.",
  },

  // Loyola Campus
  vl: {
    latitude: 45.459026,
    longitude: -73.638606,
    name: "Vanier Library Building",
    address: "7141 Sherbrooke St. W.",
  },
  ve: {
    latitude: 45.458943,
    longitude: -73.639173,
    name: "Vanier Extension",
    address: "7141 Sherbrooke St. W.",
  },
};

export default buildingCoordinates;
