...
              onPlaceSelect={(location, displayName) => {
                setUseCurrentLocation(false);
                setOrigin(location);
                setOriginText(displayName);
              }}
              placeholder={
                useCurrentLocation ? "Using Current Location" : "Enter Origin"
              }
              style={styles.searchBar}
              value={originText}
              onChangeText={setOriginText}
              onFocus={() => {
                setIsDirectionsBoxCollapsed(true);
...

            <FloatingSearchBar
              onPlaceSelect={(location, displayName) => {
                setDestination(location);
                setDestinationText(displayName);
              }}
              placeholder="Enter Destination"
              style={[styles.searchBar, { marginTop: 10 }]}
              value={destinationText}
              onChangeText={setDestinationText}
              onFocus={() => {
                setIsDirectionsBoxCollapsed(true);
              }}
...
