...
// Building to floor selector mapping
const INDOOR_NAVIGATION_BUILDINGS = {
  "Henry F. Hall Building": "HallBuilding",
  "John Molson School of Business Building": "JMSB",
  "Vanier Library Extension": "VanierExtension",
  "Engineering and Visual Arts Building": "EVBuilding",
  "Webster Library": "Library",
  "Vanier Library": "VanierLibrary",
};

const PopupModal = ({ isVisible, data, onClose, navigation }) => {
  const buildingType = INDOOR_NAVIGATION_BUILDINGS[data.fullBuildingName];

...
          <Text style={styles.modalTitle}>{data?.name}</Text>
          <Text style={styles.modalText1}>{data?.fullBuildingName}</Text>
          <Text style={styles.modalText}>{data?.address}</Text>

          <View style={styles.buttonsContainer}>
            <TouchableOpacity style={styles.closeButton} onPress={onClose}>
              <Text style={styles.closeButtonText}>Close</Text>
            </TouchableOpacity>

            <TouchableOpacity
              style={styles.getDirectionsButton}
              onPress={() => handleOutdoorsDirectionsSelect()}
              //
...
