...
    coordinate: {
      latitude: 45.496331,
      longitude: -73.580436,
    },
  },
  {
    name: "Henry F. Hall",
    coordinate: {
      latitude: 45.4973129,
      longitude: -73.578876,
    },
  },
  {
...
