const createRoom = (x, y, nearestX, nearestY) => ({
  x: x.toString(),
  y: y.toString(),
  nearestPoint: {
    x: nearestX ? nearestX.toString() : "",
    y: nearestY ? nearestY.toString() : "",
  },
});

const rooms = {
  1.293: createRoom(410, 118, 468, 125),
  1.294: createRoom(575, 132, 532, 214),
  "1.350": createRoom(687, 224, 687, 253),
  1.265: createRoom(681, 152, 647, 201),
  1.345: createRoom(738, 202, 738, 254),
  "1.340": createRoom(779, 261, 741, 259),
  elevator: createRoom(666, 602, 606, 603),
  "1.310": createRoom(662, 532, 586, 544),
  "main hall": createRoom(481, 374, 483, 385),
  1.309: createRoom(775, 595, 743, 603),
  1.424: createRoom(676, 695, 565, 694),
  1.134: createRoom(644, 733, 562, 733),
  "1.130": createRoom(608, 836, 560, 833),
  1.132: createRoom(670, 822, 677, 863),
  "1.410": createRoom(708, 786, 717, 860),
  1.426: createRoom(754, 787, 756, 843),
  "1.430": createRoom(782, 804, 783, 845),
  1.433: createRoom(744, 866, 745, 853),
  1.494: createRoom(830, 890, 827, 855),
  1.115: createRoom(803, 980, 673, 953),
  1.437: createRoom(873, 752, 882, 845),
  entrance: createRoom(434, 552, 434, 552),
};

const graph = {
  entrance: {
    "main hall": 1,
  },
  1.293: {
    1.294: 1,
    "main hall": 2,
  },
  1.294: {
    1.293: 1,
    "1.350": 1,
    "main hall": 2,
  },
  "1.350": {
    1.294: 1,
    1.265: 1,
    1.345: 0.5,
  },
  1.265: {
    "1.350": 1,
  },
  1.345: {
    "1.350": 0.5,
    "1.340": 0.5,
  },
  "1.340": {
    1.345: 0.5,
  },
  "main hall": {
    1.294: 2,
    1.293: 2,
    "1.310": 2,
    entrance: 1,
  },
  "1.310": {
    "main hall": 2,
    elevator: 1,
  },
  elevator: {
    "1.310": 1,
    1.424: 1,
  },
  1.424: {
    elevator: 1,
    1.134: 0.5,
  },
  1.134: {
    1.424: 0.5,
    "1.130": 1,
  },
  "1.130": {
    1.134: 1,
    1.132: 0.5,
  },
  1.132: {
    "1.130": 0.5,
    "1.410": 0.5,
  },
  "1.410": {
    1.132: 0.5,
    1.426: 0.5,
    1.433: 0.5,
    "1.430": 0.5,
  },
  1.426: {
    "1.410": 0.5,
    "1.430": 0.5,
    1.433: 0.5,
  },
  "1.430": {
    1.426: 0.5,
    1.433: 0.5,
    "1.410": 0.5,
  },
  1.433: {
    1.426: 0.5,
    "1.430": 0.5,
    "1.410": 0.5,
    1.494: 0.5,
    1.115: 1,
  },
  1.494: {
    1.433: 0.5,
    1.437: 0.5,
  },
  1.115: {
    1.433: 1,
  },
  1.437: {
    1.494: 0.5,
  },
};

export { rooms, graph };
