appId: com.anonymous.ConcordiaMaps
---
- launchApp
- assertVisible: "Legend"
- tapOn:
    id: "hamburger-button"
- tapOn:
    point: "20%,33%"
    label: 'Tap on "Shuttle Schedule"'
- tapOn: "Friday"
- tapOn: "Loyola"
- tapOn: "Mon - Thu"
- tapOn: "Close"
- tapOn:
    id: "hamburger-button"
- doubleTapOn:
    point: "65%,57%"
- tapOn:
    id: change-campus-button
- doubleTapOn:
    point: "61%,61%"
