appId: com.anonymous.ConcordiaMaps
---
- launchApp
- assertVisible: "Legend"
- tapOn:
    id: "hamburger-button"
- tapOn:
    point: "18%,24%"
    label: 'Tap on "Indoor Navigation"'
- tapOn: "John Molson Building"
- tapOn: "Floor 1"
- swipe:
    start: "26%,69%"
    end: "27%,59%"
    label: "Scroll through the Start rooms"
- tapOn:
    text: "1.345"
    index: 1
    label: "Tap on room 1.345"
- tapOn:
    text: "1.293"
    index: 1
    label: "Tap on room 1.293"
- tapOn: "Find Path"
- tapOn:
    text: "+"
    repeat: 4
    label: "Zoom in on the map"
- swipe:
    start: "57%,24%"
    end: "49%,46%"
    label: "Swipe map to show highlighted rooms"
- tapOn:
    text: "-"
    repeat: 2
    label: "Zoom out on the map"
- tapOn:
    text: "R"
    label: "Reset the map position"
