appId: com.anonymous.ConcordiaMaps
---
- launchApp
- assertVisible: "Legend"
- tapOn:
    id: "hamburger-button"
- tapOn:
    point: "18%,24%"
    label: 'Tap on "Indoor Navigation"'
- tapOn: "John Molson Building"
- tapOn: "Floor 1"
- tapOn:
    text: "1.294"
    index: 1
    label: "Tap on room 1.294"
- swipe:
    start: "73%,70%"
    end: "73%,58%"
    label: "Scroll through the End rooms"
- tapOn:
    text: "1.340"
    index: 1
    label: "Tap on room 1.340"
- tapOn: "Find Path"
- tapOn:
    text: "+"
    repeat: 4
    label: "Zoom in on the map"
- swipe:
    start: "62%,23%"
    end: "44%,49%"
    label: "Swipe map to show highlighted rooms"
- swipe:
    start: "50%,94%"
    end: "50%,83%"
    label: "Scroll through the Navigation Path description"
